# football-analytics-tutorials

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: df_events.csv  match_events.json  matchdict.json  shots_df.csv  teams_name_and_id.csv  xT_grid.csv
notebooks/: cwc_scraping_test.ipynb  match_dashboard_template.ipynb
